--- a/Coeli.html
+++ b/Coeli.html
@@ -53,8 +53,7 @@
     margin-top: 25px;
     padding: 15px;
     border-radius: 8px;
-    white-space: pre-line;
-    line-height: 1.5;
+    line-height: 1.6;
   }
 
   .low { background-color: #e6f7e6; color: #0a7a0a; font-weight: bold; }
@@ -323,20 +322,11 @@ ${medieval}
 
   const resultDiv = document.getElementById("result");
   resultDiv.className = caseInfo.class;
-  resultDiv.innerText = result;
+  resultDiv.innerHTML = result;
 }
 
 </script>
 
-
-
-<!-- ======================================= -->
-<!-- VERSION EDUCATIVE DYNAMIQUE -->
-<!-- ======================================= -->
-
-<script>
-
-</script>
 
 </body>
 </html>
